  *
  *  <b>Fixed:</b>
  *  - Core:
  *   - Large number of documentation and code comment corrections (thanks to Andrey from Microsin.ru)
  *   - Fixed possibility of the AVR's SPI interface being pulled out of master mode if the /SS pin is a input and pulled low (thanks
  *     to Andrey from Microsin.ru)
  *  - Library Applications:
  *   - Fixed incorrect signature in the CDC and DFU class bootloaders for the ATMEGA8U2
  *   - Fixed KeyboardHost and KeyboardHostWithParser demos displaying incorrect values when numerical keys were pressed
  *   - Fixed compile errors in the incomplete BluetoothHost demo application (thanks to Timo Lindfors)
  *
  *  \section Sec_ChangeLog110528 Version 110528
  *  <b>New:</b>
  *  - Core:
  *   - Added new ORDERED_EP_CONFIG compile time option to restrict endpoint/pipe configuration to ascending order
  *     in exchange for a smaller compiled program binary size
  *   - Added a new general RingBuff.h miscellaneous ring buffer library driver header
  *   - Added new GCC_FORCE_POINTER_ACCESS() macro to correct GCC's mishandling of struct pointer accesses
  *   - Added new GCC_MEMORY_BARRIER() macro to prevent instruction reordering across boundaries
  *   - Added basic driver example use code to the library documentation
  *   - Added new Endpoint_Null_Stream() and Pipe_Null_Stream() functions
  *   - Added new ADC_GET_CHANNEL_MASK() convenience macro
  *   - Added new HID report item macros (with HID_RI_ prefix) to allow for easy creation and editing of HID report descriptors
  *   - Added new HID_DESCRIPTOR_MOUSE(), HID_DESCRIPTOR_KEYBOARD(), HID_DESCRIPTOR_JOYSTICK() and HID_DESCRIPTOR_VENDOR() macros
  *     for easy automatic creation of basic USB HID device reports
  *   - Added new MAX() and MIN() convenience macros
  *   - Added new Serial_SendData() function to the Serial driver
  *   - Added board driver support for the Sparkfun ATMEGA8U2 breakout board