@@ -118,7 +118,7 @@ void USB_GetNextDescriptorOfTypeAfter(uint16_t* const BytesRem,
 
 uint8_t USB_GetNextDescriptorComp(uint16_t* const BytesRem,
                                   void** const CurrConfigLoc,
-                                  const ConfigComparatorPtr_t const ComparatorRoutine)
+                                  ConfigComparatorPtr_t const ComparatorRoutine)
 {
 	uint8_t ErrorCode;
 
