@@ -56,6 +56,11 @@
 		#include "USBInterrupt.h"
 		#include "Endpoint.h"
 
+	/* Enable C linkage for C++ Compilers: */
+		#if defined(__cplusplus)
+			extern "C" {
+		#endif
+
 	/* Preprocessor Checks: */
 		#if !defined(__INCLUDE_FROM_USB_DRIVER)
 			#error Do not include this file directly. Include LUFA/Drivers/USB/USB.h instead.
@@ -139,6 +144,11 @@
 			#include "AVR8/Device_AVR8.h"
 		#elif (ARCH == ARCH_UC3)
 			#include "UC3/Device_UC3.h"
+		#endif
+
+	/* Disable C linkage for C++ Compilers: */
+		#if defined(__cplusplus)
+			}
 		#endif
 
 #endif
