@@ -53,6 +53,11 @@
 		#include "../../../Common/Common.h"
 		#include "USBMode.h"		
 
+	/* Enable C linkage for C++ Compilers: */
+		#if defined(__cplusplus)
+			extern "C" {
+		#endif
+
 	/* Preprocessor Checks: */
 		#if !defined(__INCLUDE_FROM_USB_DRIVER)
 			#error Do not include this file directly. Include LUFA/Drivers/USB/USB.h instead.
@@ -240,6 +245,11 @@
 			/* Macros: */
 				#define FEATURE_SELFPOWERED_ENABLED     (1 << 0)
 				#define FEATURE_REMOTE_WAKEUP_ENABLED   (1 << 1)
+		#endif
+
+	/* Disable C linkage for C++ Compilers: */
+		#if defined(__cplusplus)
+			}
 		#endif
 
 #endif
