@@ -52,6 +52,11 @@
 		#include "../../../Common/Common.h"
 		#include "USBMode.h"		
 
+	/* Enable C linkage for C++ Compilers: */
+		#if defined(__cplusplus)
+			extern "C" {
+		#endif
+
 	/* Preprocessor Checks and Defines: */
 		#if !defined(__INCLUDE_FROM_USB_DRIVER)
 			#error Do not include this file directly. Include LUFA/Drivers/USB/USB.h instead.
@@ -62,6 +67,11 @@
 			#include "AVR8/USBController_AVR8.h"
 		#elif (ARCH == ARCH_UC3)
 			#include "UC3/USBController_UC3.h"	
+		#endif
+
+	/* Disable C linkage for C++ Compilers: */
+		#if defined(__cplusplus)
+			}
 		#endif
 
 #endif
