@@ -44,7 +44,12 @@
 	/* Includes: */
 		#include "../../../Common/Common.h"
 		#include "USBMode.h"		
-		
+
+	/* Enable C linkage for C++ Compilers: */
+		#if defined(__cplusplus)
+			extern "C" {
+		#endif
+
 	/* Preprocessor Checks: */
 		#if !defined(__INCLUDE_FROM_USB_DRIVER)
 			#error Do not include this file directly. Include LUFA/Drivers/USB/USB.h instead.
@@ -55,6 +60,11 @@
 			#include "AVR8/USBInterrupt_AVR8.h"
 		#elif (ARCH == ARCH_UC3)
 			#include "UC3/USBInterrupt_UC3.h"
+		#endif
+
+	/* Disable C linkage for C++ Compilers: */
+		#if defined(__cplusplus)
+			}
 		#endif
 
 #endif
